--- a/tasks/bbr-backup-director-to-azure/task.yml
+++ b/tasks/bbr-backup-director-to-azure/task.yml
@@ -10,6 +10,9 @@ inputs:
   - name: bbr-pipeline-tasks-repo
     # Directory containing the bbr executable
   - name: binary
+  - name: om
+  - name: bosh
+  - name: fly
 
 run:
   path: bbr-pipeline-tasks-repo/tasks/bbr-backup-director-to-azure/task.sh
