--- a/examples/pas-to-azure-pipeline.yml
+++ b/examples/pas-to-azure-pipeline.yml
@@ -9,7 +9,6 @@ opsman_credentials: &opsman_credentials
 azure_storage: &azure_storage  
   AZURE_STORAGE_ACCOUNT_NAME: ((azure-storage-account-name))
   AZURE_STORAGE_ACCOUNT_KEY: ((azure-storage-account-key))
-  AZURE_STORAGE_CONTAINER: ((azure-storage-container))  
 
 resource_types:
 # source: https://github.com/pivotal-cf/bosh-creds-resource
@@ -79,6 +78,7 @@ jobs:
     params:
       <<: *opsman_credentials
       <<: *azure_storage
+      AZURE_STORAGE_CONTAINER: ((azure_storage_container_pas_backup))
       AZURE_STORAGE_VERSIONED_FILE: pas-backup.tgz
 
 # keep the backup as a single unit to avoid copying the backup between container volumes
@@ -101,6 +101,7 @@ jobs:
     params:
       <<: *opsman_credentials
       <<: *azure_storage
+      AZURE_STORAGE_CONTAINER: ((azure_storage_container_director_backup))
       AZURE_STORAGE_VERSIONED_FILE: director-backup.tgz
 
 # keep the backup as a single unit to avoid copying the backup between container volumes
@@ -118,4 +119,5 @@ jobs:
     params:
       <<: *opsman_credentials
       <<: *azure_storage
+      AZURE_STORAGE_CONTAINER: ((azure_storage_container_om_backup))
       AZURE_STORAGE_VERSIONED_FILE: om-installation.zip
