adds noproxy setting updates tar command to remove during archive

--- a/tasks/bbr-backup-director-to-azure/task.yml
+++ b/tasks/bbr-backup-director-to-azure/task.yml
@@ -45,3 +45,6 @@ params:
 
   # the path to small file on your local computer
   AZURE_STORAGE_VERSIONED_FILE:
+  
+  # add the director to the no_proxy
+  ADD_DIRECTOR_TO_NO_PROXY: false
