adds om binary modifies script to consolidate paths

--- a/tasks/export-om-installation-to-azure/task.yml
+++ b/tasks/export-om-installation-to-azure/task.yml
@@ -8,6 +8,7 @@ image_resource:
 
 inputs:
   - name: bbr-pipeline-tasks-repo
+  - name: om
 
 outputs:
     # Contains exported Ops Manager installation settings in `installation.zip`
