--- a/tasks/bbr-backup-pks-clusters/task.yml
+++ b/tasks/bbr-backup-pks-clusters/task.yml
@@ -38,10 +38,8 @@ params:
   # If provided, a SSH tunnel through the Ops Manager VM is created and used by bbr
   OPSMAN_PRIVATE_KEY:
 
-  # Config HTTP Proxies for BOSH cli and OM
+  # Config NO_PROXY for BOSH cli and OM
   # Setting SET_NO_PROXY: true results in NO_PROXY being exported 
   #   with the BOSH Director IP and OPSMAN host
   SET_NO_PROXY:
-  HTTPS_PROXY:
-  HTTP_PROXY:
   
