Fix silent failure of jq
- Updated the jq queries for fly and om clis
- prefix every command with set -o pipefail to ensure build failure in
case jq does not match the desired entries
- use jq -e to force jq exit non-zero in case there is not a match
- explicitly use bash -c to ensure pipefail during docker build

Signed-off-by: Sarah Connor <sconnor@pivotal.io>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,15 +8,15 @@ RUN apt-get update && apt-get install -y \
   netcat-openbsd \
   && rm -rf /var/lib/apt/lists/*
 
-RUN curl -s https://api.github.com/repos/pivotal-cf/om/releases/latest \
-     | jq -r '.assets[] | select(.name=="om-linux") | .browser_download_url' \
-     | wget -qi - -O /bin/om && chmod +x /bin/om
+RUN ["/bin/bash", "-c", "set -o pipefail && curl -s https://api.github.com/repos/pivotal-cf/om/releases/latest \
+     | jq -e -r '.assets[] | select(.name | contains(\"om-linux\")) | select(.name | contains(\"tar.gz\") | not) | .browser_download_url' \
+     | wget -qi - -O /bin/om && chmod +x /bin/om"]
 
-RUN curl -s https://api.github.com/repos/cloudfoundry/bosh-cli/releases/latest \
-    | jq -r '.assets[] | .browser_download_url' \
+RUN ["/bin/bash", "-c", "set -o pipefail && curl -s https://api.github.com/repos/cloudfoundry/bosh-cli/releases/latest \
+    | jq -e -r '.assets[] | .browser_download_url' \
     | grep linux \
-    | wget -qi - -O /bin/bosh && chmod +x /bin/bosh
+    | wget -qi - -O /bin/bosh && chmod +x /bin/bosh"]
 
-RUN curl -s https://api.github.com/repos/concourse/concourse/releases/latest \
-    | jq -r '.assets[] | select(.name=="fly_linux_amd64") | .browser_download_url' \
-    | wget -qi - -O /bin/fly && chmod +x /bin/fly
+RUN ["/bin/bash", "-c", "set -o pipefail && curl -s https://api.github.com/repos/concourse/concourse/releases/latest \
+    | jq -e -r '.assets[] | select(.name | contains(\"linux-amd64.tgz\")) | select(.name | contains(\"fly\")) | select(.name | contains(\"sha\") | not) | .browser_download_url' \
+    | wget -qi - -O fly.tar.gz && tar xvf fly.tar.gz -C /bin && rm fly.tar.gz && chmod +x /bin/fly"]
