Revert "Switch tasks and example pipelines to use s3 unversioned by default"
This reverts commit aafa5397cd22739848e7773336aeb4552911d3b4.

--- a/examples/pas-pipeline.yml
+++ b/examples/pas-pipeline.yml
@@ -28,7 +28,7 @@ jobs:
       OPSMAN_PASSWORD: ((opsman-password))
   - put: om-backup-artifact
     params:
-      file: om-installation/installation_*.zip
+      file: om-installation/installation.zip
 
 - name: bbr-backup-pas
   serial: true
@@ -59,7 +59,7 @@ jobs:
         <<: *opsman_credentials
   - put: pas-backup-bucket
     params:
-      file: pas-backup-artifact/pas-backup_*.tar
+      file: pas-backup-artifact/pas-backup.tar
 
 - name: bbr-backup-director
   serial: true
@@ -92,7 +92,7 @@ jobs:
         <<: *opsman_credentials
   - put: director-backup-bucket
     params:
-      file: director-backup-artifact/director-backup_*.tar
+      file: director-backup-artifact/director-backup.tar
 
 resource_types:
 - name: pivnet
@@ -111,17 +111,17 @@ resources:
   type: s3
   source:
     <<: *s3_credentials
-    regexp: installation_(.*).zip
+    versioned_file: installation.zip
 - name: pas-backup-bucket
   type: s3
   source:
     <<: *s3_credentials
-    regexp: pas-backup_(.*).tar
+    versioned_file: pas-backup.tar
 - name: director-backup-bucket
   type: s3
   source:
     <<: *s3_credentials
-    regexp: director-backup_(.*).tar
+    versioned_file: director-backup.tar
 - name: bbr-release
   type: pivnet
   source:
