Update example pipelines to pin tasks repo
[#167571504]

--- a/examples/pas-secrets.yml
+++ b/examples/pas-secrets.yml
@@ -18,3 +18,6 @@ storage-region: eu-west-1
 storage-endpoint: s3-eu-west-1.amazonaws.com
 storage-access-key-id: example-key-id
 storage-secret-access-key: example-secret-access-key
+
+# bbr-pcf-pipeline-tasks pinned tag version
+bbr-pipeline-tasks-repo-version: example-tag-v0.0.0
