--- a/examples/pks-secrets.yml
+++ b/examples/pks-secrets.yml
@@ -21,3 +21,6 @@ storage-endpoint: s3-region-1.amazonaws.com
 storage-region: region-1
 storage-access-key-id: some-key-id
 storage-secret-access-key: some-access-key
+
+# bbr-pcf-pipeline-tasks pinned release version
+bbr-pipeline-tasks-repo-version: example-tag-v0.0.0
