--- a/examples/pas-pipeline.yml
+++ b/examples/pas-pipeline.yml
@@ -86,6 +86,11 @@ resource_types:
   source:
     repository: pivotalcf/pivnet-resource
     tag: latest-final
+- name: docker-image-resource
+  type: docker-image
+  source:
+    repository: concourse/docker-image-resource
+    tag: v1.5
 
 resources:
 - name: bbr-pipeline-tasks-repo
