Prevent triggering PR builds from forked repos
[#176554437]

- PR can contain arbitrary malicious code
- Anyone is able to fork a public repo so forks
should be considered untrusted source not ready
for triggering automatic builds.

--- a/ci/pipelines/pas-pipeline-tasks/pipeline.yml
+++ b/ci/pipelines/pas-pipeline-tasks/pipeline.yml
@@ -475,6 +475,8 @@ resources:
 - name: bbr-pipeline-tasks-prs
   type: pull-request
   source:
+    disable_forks: true
+    only_mergeable: true
     access_token: ((github.access_token))
     private_key: ((github.ssh_key))
     repo: pivotal-cf/bbr-pcf-pipeline-tasks
