--- a/ci/pipelines/pas-pipeline-tasks/pipeline.yml
+++ b/ci/pipelines/pas-pipeline-tasks/pipeline.yml
@@ -9,8 +9,8 @@ opsman_credentials: &opsman_credentials
 s3_credentials: &s3_credentials
   bucket: ((storage.backup-bucket))
   region_name: ((storage.region))
-  access_key_id: ((storage.access-key-id))
-  secret_access_key: ((storage.secret-access-key))
+  access_key_id: ((aws_credentials.access_key_id))
+  secret_access_key: ((aws_credentials.secret_access_key))
   endpoint: ((storage.endpoint))
 
 groups:
@@ -512,7 +512,7 @@ resources:
 - name: bbr-release
   type: pivnet
   source:
-    api_token: ((pivnet.api-token))
+    api_token: ((pivnet.api_token))
     product_slug: p-bosh-backup-and-restore
 
 - name: 6h
