--- a/examples/pas-pipeline.yml
+++ b/examples/pas-pipeline.yml
@@ -9,8 +9,8 @@ opsman_credentials: &opsman_credentials
 s3_credentials: &s3_credentials
   bucket: ((storage.backup-bucket))
   region_name: ((storage.region))
-  access_key_id: ((storage.access-key-id))
-  secret_access_key: ((storage.secret-access-key))
+  access_key_id: ((aws_credentials.access-key-id))
+  secret_access_key: ((aws_credentials.secret-access-key))
   endpoint: ((storage.endpoint))
 
 jobs:
@@ -112,5 +112,5 @@ resources:
 - name: bbr-release
   type: pivnet
   source:
-    api_token: ((pivnet.api-token))
+    api_token: ((pivnet.api_token))
     product_slug: p-bosh-backup-and-restore
