Fix validate-pipeline step
[#176554438]

- Step checks if pipeline contains a set
of predefined secrets

https://ci.cryo.cf-app.com/teams/bosh-backup-restore/pipelines/pas-pipeline-tasks/jobs/validate-sample-pipeline/builds/100

--- a/examples/pas-secrets.yml
+++ b/examples/pas-secrets.yml
@@ -1,5 +1,5 @@
 ---
-pivnet.api-token: example-pivnet-token
+pivnet.api_token: example-pivnet-token
 
 # Ops Manager credentials
 opsman.skip-ssl-validation: false
@@ -15,8 +15,8 @@ opsman.private-key:  | # optional, Ops Manager VM SSH private key
 storage.backup-bucket: thebucket
 storage.region: eu-west-1
 storage.endpoint: s3-eu-west-1.amazonaws.com
-storage.access-key-id: example-key-id
-storage.secret-access-key: example-secret-access-key
+aws_credentials.access-key-id: example-key-id
+aws_credentials.secret-access-key: example-secret-access-key
 
 # bbr-pcf-pipeline-tasks pinned tag version
 bbr-pipeline-tasks-repo-version: example-tag-v0.0.0
