Fix ensure-ci-includes-sample-pipeline step (#75)
[#176554438]

--- a/examples/pas-secrets.yml
+++ b/examples/pas-secrets.yml
@@ -15,8 +15,5 @@ opsman.private-key:  | # optional, Ops Manager VM SSH private key
 storage.backup-bucket: thebucket
 storage.region: eu-west-1
 storage.endpoint: s3-eu-west-1.amazonaws.com
-aws_credentials.access-key-id: example-key-id
-aws_credentials.secret-access-key: example-secret-access-key
-
-# bbr-pcf-pipeline-tasks pinned tag version
-bbr-pipeline-tasks-repo-version: example-tag-v0.0.0
+aws_credentials.access_key_id: example-key-id
+aws_credentials.secret_access_key: example-secret-access-key
