--- a/examples/pas-pipeline.yml
+++ b/examples/pas-pipeline.yml
@@ -9,8 +9,8 @@ opsman_credentials: &opsman_credentials
 s3_credentials: &s3_credentials
   bucket: ((storage.backup-bucket))
   region_name: ((storage.region))
-  access_key_id: ((aws_credentials.access-key-id))
-  secret_access_key: ((aws_credentials.secret-access-key))
+  access_key_id: ((aws_credentials.access_key_id))
+  secret_access_key: ((aws_credentials.secret_access_key))
   endpoint: ((storage.endpoint))
 
 jobs:
