Make trigger-pr job run automatically on new PRs
[#177074920]

--- a/ci/pipelines/pas-pipeline-tasks/pipeline.yml
+++ b/ci/pipelines/pas-pipeline-tasks/pipeline.yml
@@ -163,6 +163,7 @@ jobs:
   serial: true
   plan:
   - get: bbr-pipeline-tasks-prs
+    trigger: true
 
 - name: validate-sample-pipeline-prs
   plan:
