Rename master --> main in examples
Signed-off-by: Neil Hickey <nhickey@vmware.com>

--- a/examples/pas-pipeline.yml
+++ b/examples/pas-pipeline.yml
@@ -92,7 +92,7 @@ resources:
   type: git
   source:
     uri: https://github.com/pivotal-cf/bbr-pcf-pipeline-tasks.git
-    branch: master
+    branch: main
 - name: om-backup-artifact
   type: s3
   source:
