--- a/examples/pks-pipeline.yml
+++ b/examples/pks-pipeline.yml
@@ -26,7 +26,7 @@ resources:
   source:
     uri: git@github.com:pivotal-cf/bbr-pcf-pipeline-tasks.git
     private_key: ((git-private-key))
-    branch: master
+    branch: main
     tag_filter: ((bbr-pipeline-tasks-repo-version))
 
 - name: bbr-release
